--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,15 @@
 
 <div id="wrapper">
 	<ul id="navigation">
-		<li><%= link_to 'New Deck', new_deck_path %></li>
-		<li><%= link_to "Decks", decks_path%></li>
+		<% if current_user %>
+			<li><%= link_to 'New Deck', new_deck_path %></li>
+			<li><%= link_to "Decks", decks_path%></li> &#8226;
+			<li><%= link_to current_user.email, user_path(current_user)%></li>
+			<li><%= link_to "Log Out", logout_path%></li>
+		<% else %>
+			<li><%= link_to 'Sign Up', signup_path %></li>
+			<li><%= link_to "Log In", login_path%></li>
+		<% end %>
 		<!-- <li> <%= link_to "Home", decks_path%></li> -->
 	</ul>
 	
