--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -7,6 +7,12 @@
 	<% @decks.each do |deck| %>
 		<div class="deck">
 		    <div class="deck-title"><%=link_to deck.title, deck_path(deck) %></div>
+		
+			<% unless deck.user.nil?%>
+				<div class="deck-creator"><%= "by #{deck.user.name}"%></div>
+			<% else %>
+				<div class="deck-creator"><%= "by anonymous"%></div>
+			<% end %>
 		</div>				
 	<% end %>
 </div>
