--- a/app/views/decks/full.html.erb
+++ b/app/views/decks/full.html.erb
@@ -1,6 +1,4 @@
-full
-
-<div id="full-view">
+<div id="full-view" class="learn-view">
 	<div id="flashcard">
 		<div id="flashcard-a"><%= @flashcard.side_a%></div>
 		<div id="flashcard-b"><%= @flashcard.side_b%></div>
