--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -1,3 +1,13 @@
-<h1>New deck</h1>
+<% content_for :head do %>
+	<script type="text/javascript" charset="utf-8">
+		$(document).ready(function(){
+			$("#deck_title").prepopulateElement('deck title');
+		})
+	</script>
+<% end %>
+
+<% content_for :header_title do %>
+ + New Deck
+<% end %>
 
 <%= render 'form' %>
