--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ta2ed</title>
+  <title>Ta2</title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= yield(:head)%>
@@ -10,24 +10,26 @@
 <body>
 
 
-
-<div id="wrapper">
-	<ul id="navigation">
+<div id="navigation">
+	<a href="/" id="logo-wrapper"><%= image_tag 'logo.png', :id => 'logo'%></a>
+	<ul id="nav-bar">
+		<li><%= link_to "Decks", decks_path%></li> &#8226;
 		<% if current_user %>
-			<li><%= link_to 'New Deck', new_deck_path %></li>
-			<li><%= link_to "Decks", decks_path%></li> &#8226;
+			<li><%= link_to 'New Deck', new_deck_path %></li>			
+		<% end %>
+	</ul>
+	<ul id="user-bar">
+		<% if current_user %>
 			<li><%= link_to current_user.name, edit_user_path(current_user)%></li>
 			<li><%= link_to "Log Out", logout_path%></li>
 		<% else %>
 			<li><%= link_to 'Sign Up', signup_path %></li>
 			<li><%= link_to "Log In", login_path%></li>
 		<% end %>
-		<!-- <li> <%= link_to "Home", decks_path%></li> -->
 	</ul>
-	
-	<div id="header">
-		ta2ed
-	</div>
+</div>
+
+<div id="wrapper">
 	<div id="content">
 		<div id="header-title">
 			<%= yield :header_title%>
@@ -36,7 +38,7 @@
 	</div>
 	
 	<div id="footer">
-		ta2ed &copy; 2012
+		ta2 &copy; 2012
 	</div>
 </div>
 </body>
